# tts-gui

./: LICENSE  README.md  pyproject.toml
Example/: tts_example.py
src/tts_gui/: cli.py  main.py
src/tts_gui/UI/: TTS.ui  TTS_ui.py
